@@ -1,8 +1,7 @@
 TODO:
 -----
 
-1/ permit user to select how many lines should be given for each articles on index page (for an example 10 lines): to do this, do a head -n 10 on art1.md then do markdown on it
-2/ Technical documentation
+1/ Technical documentation
 
 - Add BLOG_CHARSET in RSS file
 - Permit user to choose compression tool. Use ${compression} for an example with some params. Separate archive tool from compression tool. Example: tar c some_files | gzip > file.tar.gz
@@ -100,3 +99,4 @@ DONE:
 - use : ftp://ftp.netbsd.org/pub/pkgsrc/pkgsrc-2012Q2/pkgsrc/Makefile to discover if/else/end in bsd makefile
 - Add sidebar.md in special directory in order to be displayed on Makefly
 - Instead of copying each file given in THEME_STATIC_FILES, just copy those given in template/theme_name/static directory
+- permit user to select how many lines should be given for each articles on index page (for an example 10 lines): to do this, do a head -n 10 on art1.md then do markdown on it
