@@ -10,3 +10,4 @@ SOURCE_LINK_NAME = Sources disponibles sur
 SOURCE_LINK_TITLE = Le projet Makefly sur Gitorious
 THEME_IS = Le thème est : 
 LINKS_TITLE = Liens
+READ_MORE = Lire la suite
