@@ -1,0 +1,2 @@
+
+<div class="read_more"><a href="${BASE_URL}/${POSTDIR_NAME}/${POST_FILE}">${READ_MORE}</a></div>
